[FIX] Prevent unbroken string from overflowing popover (tested in one instance but should be further checked). Thanks, Chealer. Todo: implement method for really wide content.

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -3028,6 +3028,9 @@ body.fullscreen.tiki.navbar-padding {
 .tiki .popover p:last-child {
   margin-bottom: 0; }
 
+.tiki .popover-content {
+  word-wrap: break-word; }
+
 .tiki .media-overflow-visible, .tiki .media-overflow-visible .media-body {
   overflow: visible; }
 
